# ChangeLog for app-misc/supercat
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/supercat/ChangeLog,v 1.5 2007/11/03 19:35:43 tester Exp $

  03 Nov 2007; Olivier Crête <tester@gentoo.org> -supercat-0.5.1.ebuild,
  supercat-0.5.3.ebuild:
  Stable on amd64

*supercat-0.5.3 (03 Oct 2007)

  03 Oct 2007; <tester@gentoo.org> -supercat-0.5.2.ebuild,
  +supercat-0.5.3.ebuild:
  Version bump

  29 Sep 2007; <tester@gentoo.org> supercat-0.5.1.ebuild,
  supercat-0.5.2.ebuild:
  Ooops, forgot some quotes

*supercat-0.5.2 (28 Sep 2007)

  28 Sep 2007; <tester@gentoo.org> +supercat-0.5.2.ebuild:
  Version bump

*supercat-0.5.1 (01 Sep 2007)

  01 Sep 2007; Olivier Crête <tester@gentoo.org> +metadata.xml,
  +supercat-0.5.1.ebuild:
  New package, being proxy maintained for gentoofan23
