@@ -2,14 +2,19 @@
 Hash: SHA1
 
 DIST supercat-0.5.3.tar.gz 102969 RMD160 0d12d9c75a1cc801a8aed4312be57ab7bd6ab387 SHA1 24fab9edbde86e7df8b38a6e688e628a9b065040 SHA256 16402950c87aa55bedd0dab77ee11e979170497ca3d62ba3a9dcc98b969ceaf9
+DIST supercat-0.5.4.tar.gz 103173 RMD160 d1b1e82020f1a617440ed6a983c12b57ee9ecbf8 SHA1 9874f7aacd49d9f96d06faed972604cad03e12af SHA256 86bebad211529ba3256f702f65c290bfacfe5aa764f08f4d2a20a5999eb93fd8
 EBUILD supercat-0.5.3.ebuild 553 RMD160 a6172c046219d5ead1bb9ab7571b671016104eba SHA1 2b49180724fe87989c712942192b3f6e9855b07f SHA256 d1a38b4d06b76337bd4a677c4ca199c3aa63eb33fca8eebc6a291b03a2507a92
 MD5 eaec50063d8aac9905252871ef293045 supercat-0.5.3.ebuild 553
 RMD160 a6172c046219d5ead1bb9ab7571b671016104eba supercat-0.5.3.ebuild 553
 SHA256 d1a38b4d06b76337bd4a677c4ca199c3aa63eb33fca8eebc6a291b03a2507a92 supercat-0.5.3.ebuild 553
-MISC ChangeLog 852 RMD160 b87b6417961240f95dcf88b80f343f6fa31fd560 SHA1 08466070db18ef86a2ad30ae1d07fc6a5f481c90 SHA256 a32941a55d26ac2cf296de52cb42ffd16a4926ae177e0c532fcb57686c4749b3
-MD5 22237638b3cd2377196fa641dfcc98c8 ChangeLog 852
-RMD160 b87b6417961240f95dcf88b80f343f6fa31fd560 ChangeLog 852
-SHA256 a32941a55d26ac2cf296de52cb42ffd16a4926ae177e0c532fcb57686c4749b3 ChangeLog 852
+EBUILD supercat-0.5.4.ebuild 554 RMD160 1819ae4cd5f3cfc2b56528ba17a96facf6b4498f SHA1 32993bffe0c8fc495c12b24f55f45b5f693ed925 SHA256 4914b8392bfebb57cb342f9e43c59493c17884f68e4c65521e055dafa1c3dbbe
+MD5 9d495d7e8e8acfb1b2e512a927e69fb6 supercat-0.5.4.ebuild 554
+RMD160 1819ae4cd5f3cfc2b56528ba17a96facf6b4498f supercat-0.5.4.ebuild 554
+SHA256 4914b8392bfebb57cb342f9e43c59493c17884f68e4c65521e055dafa1c3dbbe supercat-0.5.4.ebuild 554
+MISC ChangeLog 958 RMD160 616210f643e2aa2730d1b1646113df80e69ebd71 SHA1 58bc91c5328dbff567642c70f5e2a23135e76e57 SHA256 58ba09e452f5d46c9815ed83b7f6c2cc489394afd8bcbbcaa907f9d4e073748d
+MD5 a8d8ecad213751698c82784944210fb8 ChangeLog 958
+RMD160 616210f643e2aa2730d1b1646113df80e69ebd71 ChangeLog 958
+SHA256 58ba09e452f5d46c9815ed83b7f6c2cc489394afd8bcbbcaa907f9d4e073748d ChangeLog 958
 MISC metadata.xml 314 RMD160 172ff8996796a2ee4fecd6db8108926ebb1db070 SHA1 8f8b5678590da752c7ce819f9ba63f72ad807848 SHA256 8cd7201b7981bfb393f0578af39142b349d01258fa498f98b64df46efcf03749
 MD5 75c97e8703721a33d1ad26c669a5911c metadata.xml 314
 RMD160 172ff8996796a2ee4fecd6db8108926ebb1db070 metadata.xml 314
@@ -17,10 +22,13 @@ SHA256 8cd7201b7981bfb393f0578af39142b349d01258fa498f98b64df46efcf03749 metadata
 MD5 2e40bd811c0a29534b944b4476eb024f files/digest-supercat-0.5.3 244
 RMD160 e0bd7425c544a346d0d87b847bd52c7c09ac81b9 files/digest-supercat-0.5.3 244
 SHA256 732365445b09f3de4dc17687545693dbf4aac633c34c0f7a6f33de5f061411e5 files/digest-supercat-0.5.3 244
+MD5 cc62b847a062adfee915c22439712d2a files/digest-supercat-0.5.4 244
+RMD160 87a34ab109d90fa43e677c5f4d3388f4840d5474 files/digest-supercat-0.5.4 244
+SHA256 88f1b5e385598ac0efc2c1292472f22e6888245a2d6ca7cdb41a968f908c2c46 files/digest-supercat-0.5.4 244
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.7 (GNU/Linux)
 
-iD8DBQFHLM3E+IXOQtHLm/gRAn2wAJ9TOHgvsn58RdNDhJARqh8Cn6YaywCfRdXD
-QuWaxCMrpnXqK25dyHTJeVQ=
-=lz5g
+iD8DBQFHXsC6+IXOQtHLm/gRAlxqAJ9Tafr2NT/QOJRY1KxhM+YmbYeedQCfSvuG
+0vuWbErFin8ESDJuwd6NvZk=
+=lEvF
 -----END PGP SIGNATURE-----
