@@ -1,0 +1,3 @@
+MD5 b980ed47e8b5cab97e72cb64bae256bc supercat-0.5.4.tar.gz 103173
+RMD160 d1b1e82020f1a617440ed6a983c12b57ee9ecbf8 supercat-0.5.4.tar.gz 103173
+SHA256 86bebad211529ba3256f702f65c290bfacfe5aa764f08f4d2a20a5999eb93fd8 supercat-0.5.4.tar.gz 103173
