@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/supercat
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/supercat/ChangeLog,v 1.5 2007/11/03 19:35:43 tester Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/supercat/ChangeLog,v 1.6 2007/12/11 16:54:12 tester Exp $
+
+*supercat-0.5.4 (11 Dec 2007)
+
+  11 Dec 2007; <tester@gentoo.org> +supercat-0.5.4.ebuild:
+  Version bump
 
   03 Nov 2007; Olivier Crête <tester@gentoo.org> -supercat-0.5.1.ebuild,
   supercat-0.5.3.ebuild:
